[tool.poetry]
name = "flacmirror"
version = "0.1.1"
description = ""
authors = ["Moritz Schulte <mschulte.g@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
flacmirror = "flacmirror.main:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
