[tool.poetry]
name = "flacmirror"
version = "0.2.0"
description = ""
authors = ["Moritz Schulte <mschulte.g@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mschulteg/flacmirror"
repository = "https://github.com/mschulteg/flacmirror"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
flacmirror = "flacmirror.main:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
