[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flacmirror"
description = 'Tool for syncing flac files while additionally converting them'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Moritz Schulte", email = "mschulte.g@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.scripts]
flacmirror = "flacmirror.main:main"

[project.urls]
Documentation = "https://github.com/mschulteg/flacmirror#readme"
Issues = "https://github.com/mschulteg/flacmirror/issues"
Source = "https://github.com/mschulteg/flacmirror"

[tool.isort]
profile = "black"

[tool.hatch.version]
path = "flacmirror/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = []

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black",
  "isort",
  "mypy"
]

[tool.hatch.envs.lint.scripts]
typing = "mypy ."

style = [
  "black --check --diff .",
  "isort --check-only --diff ."
]

fmt = [
  "black .",
  "isort .",
]

all = [
  "style",
  "typing",
]
